Source/WebCore/svg/SVGStyledElement.cpp
@@ -450,7 +450,7 @@ void SVGStyledElement::clearHasPendingResourcesIfPossible()
 
 AffineTransform SVGStyledElement::localCoordinateSpaceTransform(SVGLocatable::CTMScope) const
 {
-    // To be overriden by SVGStyledLocatableElement/SVGStyledTransformableElement (or as special case SVGTextElement)
+    // To be overriden by SVGStyledLocatableElement/SVGStyledTransformableElement (or as special case SVGTextElement and SVGPatternElement)
     ASSERT_NOT_REACHED();
     return AffineTransform();
 }
